plugins {
    id 'java-library'
}

dependencies {
    api (
        'commons-codec:commons-codec:1.17.1',
        'com.google.guava:guava:33.3.0-jre',
        'io.dropwizard.metrics:metrics-core:4.2.27',
        'org.slf4j:slf4j-api:2.0.16',
        'com.j256.simplemagic:simplemagic:1.17',
        'javax.annotation:javax.annotation-api:1.3.2',
        'jakarta.ws.rs:jakarta.ws.rs-api:4.0.0',
    )

    implementation (
        'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.2',
        'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.17.2',
        'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2',
        'com.fasterxml.jackson.module:jackson-module-blackbird:2.17.2',
        'org.apache.commons:commons-compress:1.27.1',
        'org.jline:jline-terminal:3.26.3',
    )

    // this dep is not allowed, as logging depends on common - circle. it works for gradle,
    // but eclipse does not distinguish between real and test dependencies.
    //commonTestDeps(project(":logging"))
}

configurations {
    commonTestDeps.extendsFrom(configurations.implementation)
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
